pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/backend-request-header-modifiers.listeners.golden.yaml
resources:
- name: kri_msvc_default___backend_80
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 80
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_msvc_default___backend_80
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_msvc_default___backend_80
              routes:
              - match:
                  path: /backend
                name: kri_mhttpr_default___test-origin_rule_0
                route:
                  timeout: 0s
                  weightedClusters:
                    clusters:
                    - name: kri_msvc_default___backend_80
                      requestHeadersToAdd:
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: x-backend-set
                          value: primary
                      - header:
                          key: x-backend-add
                          value: backend
                      requestHeadersToRemove:
                      - x-backend-remove
                      weight: 90
                    - name: kri_msvc_default___canary_80
                      weight: 10
              - match:
                  prefix: /backend/
                name: kri_mhttpr_default___test-origin_rule_0
                route:
                  timeout: 0s
                  weightedClusters:
                    clusters:
                    - name: kri_msvc_default___backend_80
                      requestHeadersToAdd:
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: x-backend-set
                          value: primary
                      - header:
                          key: x-backend-add
                          value: backend
                      requestHeadersToRemove:
                      - x-backend-remove
                      weight: 90
                    - name: kri_msvc_default___canary_80
                      weight: 10
              - directResponse:
                  body:
                    inlineString: ""
                  status: 404
                match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
          statPrefix: kri_msvc_default___backend_80
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: kri_msvc_default___backend_80
    name: kri_msvc_default___backend_80
    statPrefix: kri_msvc_default___backend_80
    trafficDirection: OUTBOUND
